# openclaw-spec-v4-2

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile.sandbox  entrypoint.sh  requirements.allowlist.txt
docs/: CONTRIBUTOR_GUIDE.md  USAGE_FOR_BOSS.md
examples/: skill_manifest_example.json
reports/: change_impact.md  checkpoint.md  contract_lint_report.md  final_brief.md  repo_profile.md  repo_review.md  spec_architecture.md
reports/skill-candidates/: 2026-02-04_clawhub.md
skills/: README.md
skills/detect-breaking-changes/: SKILL.md
skills/spec-ref-audit/: SKILL.md
skills/validate-spec-suite/: SKILL.md
spec/: README.md  acceptance.md  architecture.md  gsd_tasks.md  iteration.md  overview.md  roadmap_b.md  security.md
spec/changes/: TEMPLATE.md
spec/contracts/: skill_schema.json
spec/eval/: redteam.md  test_cases.md
src/: __init__.py  audit.py  day_logger.py  night_evolver.py  promote.py  registry.py  rollback.py  skill_loader.py
src/eval/: __init__.py  gate.py
src/llm/: __init__.py  base.py  mock.py
src/models/: __init__.py  queue.py  registry.py  skill.py
src/sandbox/: __init__.py  harness.py  runner.py
src/security/: __init__.py  policy.py  (+1 more)
tests/: __init__.py  conftest.py  test_ast_gate.py  test_audit.py  test_day_logger.py  test_e2e.py  test_eval_gate.py  test_manifest_validator.py  test_mock_llm.py  test_night_evolver.py  test_promote.py  test_registry.py  test_rollback.py  test_sandbox.py  test_sandbox_runner_config.py  test_security_integration.py  test_skill_loader.py  test_skill_model.py
(+15 files in other folders)
